moved one html file to the root

--- a/html/indexSD.html
+++ b/html/indexSD.html
@@ -9,11 +9,9 @@
   <body>
     <header class="banner">
       <div class="bannerContent grid">
-        <a href="../../index.html" style="text-decoration: none"
-          >All</a
-        >
+     
       <a style="text-decoration: none" href="indexT.html">Tuner</a>
-      <a style="text-decoration: none" href="indexBG.html">Beginner Guitar</a>
+      <a style="text-decoration: none" href="../indexBG.html">Beginner Guitar</a>
       <a style="text-decoration: none" href="indexMT.html">Music Theory</a>
       <a href="indexFT.html" style="text-decoration: none">Fretboard IQ</a>
       <br />
