renamed the root file and its links

--- a/html/indexMT.html
+++ b/html/indexMT.html
@@ -11,7 +11,7 @@
       <div class="bannerContent grid">
  
       <a style="text-decoration: none" href="indexT.html">Tuner</a>
-      <a style="text-decoration: none" href="../indexBG.html">Beginner Guitar</a>
+      <a style="text-decoration: none" href="../index.html">Beginner Guitar</a>
       <a style="text-decoration: none" href="indexMT.html">Music Theory</a>
       <a href="indexFT.html" style="text-decoration: none">Fretboard IQ</a>
       <br />
