--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <header class="banner">
       <div class="bannerContent grid">
         <a style="text-decoration: none" href="./html/indexT.html">Tuner</a>
-        <a style="text-decoration: none" href="indexBG.html">Beginner Guitar</a>
+        <a style="text-decoration: none" href="index.html">Beginner Guitar</a>
         <a style="text-decoration: none" href="./html/indexMT.html">Music Theory</a>
         <a href="./html/indexFT.html" style="text-decoration: none">Fretboard IQ</a>
         <br />
